2011-08-26  Jeremy Cribb <jcribb@email.unc.edu>
	* TODO.txt:  added.  keeping up with bugs and feature requests.  This project isn't patched into redmine.

2011-08-15  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_read_wells_txtfile.m:  fixed a bug where well IDs were not converting correctly from strings to nums.

2011-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_clean_path.m:  added.  cleans a data path of files created by panoptes analysis code.  useful for testing code on a dataset after making changes.

2011-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_load_metadata.m: now calculates frame rate from data saved in 'ExperimentConfig' file.
	* pan_analyze_CellExpt.m:  updated to generate evt (filtered) files if necessary.
	* pan_process_CellExpt.m:  same.
	* pan_publish_CellExpt.m:  corrected reference to 'duration' of experiment to 'seconds', the way it's referenced in the 'ExperimentConfig' file.
	* pan_sim_newt_run.m:  saves files in default 'vrpn.mat' format instead of 'evt' format.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_publish_CellExpt.m:  corrected report output.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_gen_filelist.m:  added.  generates a list of filenames that match the wells,passes parameters given to it.
	* pan_MCU2um.m:  added.  converts MCU parameter to microns.
	* pan_process_CellExpt.m:  fixed typo to function call.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_read_well_layout.m:  added.  Reads in the "well layout" csv file generated by Russ's Well Layout program designed for Panoptes.   The data are outputted to a data structure whose design depends on the fields saved by the well layout application.
	* pan_combine_data.m:  added.  uses the well_layout structure to combine data using the inputted field as the means to "slice" through the data.  Only works for a single parameter at this time.